# storage

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  start.sh
.github/workflows/: build.yml
docs/: index.md  job.md
storage/: __init__.py  __main__.py  archive.py  config.py  encryption.py  logging.py  start.sh  upload.py
storage/db/: __init__.py  base.py  base_class.py  init_db.py  multitenancy.py  session.py
storage/db/migrations/: env.py  script.py.mako
storage/db/migrations/versions/: 1666949433_9fa9c8a9ae35_first_dummy_model.py  1667544344_0903d9db4e1b_remove_dummy_model.py  1667548794_c6632fd5e42e_user_model.py  1667992695_7a2d90c8f7cc_access_token_for_users.py  1668175628_848a67166f63_content_model.py  1668492290_5d89b8f31a7d_permissions_model.py  1669976948_738f87e4a996_key_model.py  1671016701_51a5feebcdc7_job_model.py  1671098599_a8c5a9fcab57_add_encrypted_file_cid_field_to_content_.py  1671108125_dfe131e37d74_add_availability_field_to_content_model.py  1673276208_43ed663dd8e5_add_timestamp_mixin.py  1673511865_209e2baad6e1_add_encrypted_file_size_to_content_model.py  1674283621_5314853acecf_add_enum_value_to_content_availability.py  1677005754_2f9a1bbc174c_add_ipfs_file_size_field_to_content_.py  1677009260_6d74e5e83072_add_filename_field_to_content.py  1682760253_08c0c95a01df_add_email_field_to_tenant.py  1685406566_67c20c6f5712_add_merklebot_user_id_field_to_users_.py  1685407486_e668720dee8d_add_merklebot_user_id_field_to_tenants_.py  1686041480_9cec17f8177e_add_key_field_to_contents_table.py  1686208284_441e1f8b12a5_add_instant_till_field_to_contents_table.py  1688993686_473b2c5534a9_add_cars_model_to_db.py  1694474784_871b7622dd89_add_restore_request_model.py  1696860995_e12838dba343_add_availability_fields_to_contents_.py
storage/db/models/: __init__.py  content.py  filecoin.py  job.py  key.py  permission.py  tenant.py  token.py  user.py
storage/schemas/: content.py  job.py  key.py  specification.py  tenant.py  token.py  user.py
storage/services/: content_processor.py  custody.py  instant_storage.py
storage/web/: api.py  deps.py  security.py
storage/web/endpoints/: contents.py  jobs.py  keys.py  permissions.py  specifications.py  tenants.py  tokens.py  users.py
storage/web/routers/: contents.py  jobs.py  keys.py  permissions.py  tenants.py  tokens.py
storage/web/routers/internal/: filecoin.py  internal.py  tenants.py  users.py
storage/web/schemas/: content.py  job.py  permission.py  tenant.py  token.py  user.py
