[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Alisher A. Khassanov <a.khssnv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pydantic = "^1.10.2"
fastapi-camelcase = "^1.0.5"
python-multipart = "^0.0.5"
pydantic-partial = "^0.3.3"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
httpx = "^0.23.0"
aiohttp = "^3.8.3"
SQLAlchemy = "^1.4.42"
psycopg2 = "^2.9.5"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
ipython = "^8.5.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
